--- a/articles/2012-03-05-FM/2012-03-12-IMITATOR-FM.tex
+++ b/articles/2012-03-05-FM/2012-03-12-IMITATOR-FM.tex
@@ -777,7 +777,7 @@ The result for this example is given in Figure \ref{fig:carto} for this $V_0$ wi
 \end{figure}
 
 Note that the full dense parametric space is covered after only 20 applications of~$\IM$.
-This corresponds to the bottom left ``triangle'' of Fig. 1 (a) in \cite{bb04}.
+The green part corresponds to the bottom left ``triangle'' of Fig. 1(a) in~\cite{bb04}.
 
 
 % 
