--- a/articles/2012-03-05-FM/2012-03-12-IMITATOR-FM.tex
+++ b/articles/2012-03-05-FM/2012-03-12-IMITATOR-FM.tex
@@ -396,7 +396,7 @@ $^3$Universit\"at Bremen, Germany}
 Different from CEGAR-based methods% (see \cite{cgjlv00})
 , this algorithm for parameter synthesis makes use of a ``good'' parameter valuation~$\pio$ instead of a set of ``bad'' states~\cite{acef09}.
 \imitator{} takes as input a network of PTAs with stopwatches
-and a reference valuation $\pio$; it synthesizes a constraint~$\Ko$ on the parameters such that (1) $\pio \models \Ko$ and (2) for all parameter valuation~$\piprime$ satisfying $\Ko$, the trace set (i.e., the discrete behavior) of~$\A$ under~$\piprime$ is the same as for~$\A$ under~$\pio$.
+and a reference valuation~$\pio$; it synthesizes a constraint~$\Ko$ on the parameters such that (1) $\pio \models \Ko$ and (2) for all parameter valuation~$\piprime$ satisfying $\Ko$, the trace set (i.e., the discrete behavior) of~$\A$ under~$\piprime$ is the same as for~$\A$ under~$\pio$.
 %This preserves in particular linear time properties, 
 This provides the system with a criterion of \emph{robustness} (see, e.g., \cite{m11})
 %, by formally guaranteeing a uniform discrete behavior 
@@ -478,14 +478,15 @@ around~$\pio$.
 
 A basic implementation named \imitator{} has first been proposed%in~\cite{and09}
 , under the form of a \python{} script calling \hytech{}~\cite{hhw97}.
-The tool has then been entirely rewritten in \imitatordeux{}~\cite{and10}, under the form of a standalone \ocaml{} program. % making use of the Parma Polyhedra Library (PPL)~\cite{bhz08}.
+The tool has then been entirely rewritten in \imitatordeux{}~\cite{and10}, under the form of a standalone \ocaml{} program.
+% able to verify a number of parametric case studies. % making use of the Parma Polyhedra Library (PPL)~\cite{bhz08}.
 A number of case studies containing up to 60 timing parameters could be efficiently verified in the purely timed framework.
 
 Since~\cite{and10}, we extended the input formalism to PTAs equipped with \emph{stopwatches}: clocks can now be stopped for some time while others keep growing.
 Also, we added clock updates: clocks can now be set to arbitrary linear combinations of other clocks, parameters
 and discrete variables.
-%%%We also implemented further algorithms based on~$\IM$, that satisfy weaker properties than the preservation of the trace sets, while outputting larger sets of parameter valuations than~$\IM$ (and possibly non-convex)..
-These extensions allow us to consider larger classes of case studies, 
+% We also implemented further algorithms based on~$\IM$, that satisfy weaker properties than the preservation of the trace sets, while outputting larger sets of parameter valuations than~$\IM$ (and possibly non-convex).
+These extensions, together with powerful algorithmic improvements for state space reduction, allow us to consider larger classes of case studies, 
 such as scheduling problems.
 
 % \commentaire{Laurent a dit :
@@ -502,15 +503,16 @@ such as scheduling problems.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\imitator{} is available under the GNU GPL license.
-The core of the program is written in OCaml, and interacts with the Parma Polyhedra Library (PPL)~\cite{bhz08}.
+The core of \imitator{} (available under the GNU GPL license) is written in OCaml, and interacts with the Parma Polyhedra Library (PPL)~\cite{bhz08}.
 Exact arithmetics with unbounded precision is used.
-
+% 
 \imitator{} takes as input a network of PTAs with stopwatches.
 %%%, that synchronize on shared actions.
-The input syntax, inspired by~\hytech{}, allows the use of clocks (or stopwatches), rational-valued discrete variables, and parameters (i.e., unknown constants) to be used altogether in linear terms, within guards, invariants and updates.
-
-A constraint is output in text format; furthermore, the set of traces computed by the analysis can be output under a graphical form (using \graphviz{}) for reasonably sized case studies (up to a few thousands reachable states).
+The input syntax %, inspired by~\hytech{},
+allows the use of clocks (or stopwatches), rational-valued discrete variables, and parameters (i.e., unknown constants) to be used altogether in linear terms, within guards, invariants and updates.
+% 
+A constraint is output in text format; furthermore, the set of traces computed by the analysis can be output under a graphical form (using \graphviz{}) for case studies with reasonable size (up to a few thousands reachable states).
+% The tool is .
 
 \imitator{} implements in particular the following algorithms:
 \begin{description}
@@ -580,17 +582,17 @@ We then use \imitator{} (instead of a CEGAR-like method
 as in \cite{cpr08}) with $\A \parallel {\cal O}$ as a model input
 and $\pio$ as a valuation input.
 This yields the constraint $\Ko$:  $7 > d'_2 \wedge 3 > d_2 \wedge d'_2 + d_2 \geq 7$.
-(For a geometrical representation of $\Ko$, see Fig.~\ref{fig:geom} of Appendix 1.)
+(For a geometrical representation of~$\Ko$, see Figure~\ref{fig:geom} of Appendix 1.)
 By the $\IM$ principle, the set of traces (i.e., discrete runs) of
 $\A \parallel {\cal O}$ is always the same,
-for any point $(d_2,d'_2)$ of $\Ko$.
-(This set of traces is depicted under the form of a tree in Fig.~\ref{fig:output} in Appendix 1.)
-Since the makespan for $\pio$ is 9,
+for any point $(d_2,d'_2)$ of~$\Ko$.
+(This set of traces is depicted under the form of a tree in Figure~\ref{fig:output} in Appendix 1.)
+Since the makespan for $\pio$ is~9,
 we know that some branches of the tree do not contain
 any $\mathit{DEADLINE}$ label (these branches end at node $s73$
-in Fig. \ref{fig:output}).
-This holds for each point $(d_2,d'_2)$ of $\Ko$.
-In other words, the makespan of the system is  (at most) 9, everywhere in~ $\Ko$. 
+in Figure~\ref{fig:output}).
+This holds for each point $(d_2,d'_2)$ of~$\Ko$.
+In other words, the makespan of the system is  (at most) 9, everywhere in~$\Ko$. 
 %This gives us a measure of robustness of the system around $\pio$.
 
 % Such a robustness analysis, inspired from \cite{cpr08}, 
@@ -599,7 +601,8 @@ In other words, the makespan of the system is  (at most) 9, everywhere in~ $\Ko$
 
 Another example of application of \imitator{} 2.5 to a scheduling problem, originating from \cite{bb04}, is given in Appendix 2 (using 
 the cartography method of~\cite{af10}). 
-All case studies and experiments (performed on Ubuntu 11.10 equipped with an Intel Core\,2 2.93\,GiHz processor with 2\,GiB RAM) are described in a research report~\cite{soulat12} (Source code, binaries, all case studies and logs are available in \url{http://www.lsv.ens-cachan.fr/Software/imitator/}).
+All case studies and experiments %(performed on Ubuntu 11.10 equipped with an Intel Core\,2 2.93\,GiHz processor with 2\,GiB RAM)
+are described in a research report~\cite{soulat12} (Source code, binaries, all case studies and logs are available in \url{http://www.lsv.ens-cachan.fr/Software/imitator/}).
 
 
 
@@ -705,7 +708,7 @@ with first interesting results.
 
 \appendix
 
-\section*{Appendix 1: Job-shop Case Case Study from \cite{AM02}}
+\section*{Appendix 1: Jobshop Case Study from \cite{AM02}}
 
 %%%%\subsection*{Visual Examples of Schedules}\label{app:schedules}
 
@@ -754,14 +757,15 @@ with first interesting results.
 
 \section*{Appendix 2: Rate Monotonic Case Study from \cite{bb04}}
 \label{app:carto}
-We present here what we can obtain from \imitator{} 2.5 with the Behavioral Cartography ($\BC$) output. By iterating $\IM$ over all the integers points (or each step given by a rational value, e.g., $1/3$) inside a finite but dense rectangle $V_0$ in the parametric space, one is able to decompose (most of) the parametric space included into $V_0$ into behavioral tiles\footnote{Actually, one can take a finer discretization step to ensure a better coverability of~$V_0$}.
+We present here what we can obtain from \imitator{} 2.5 with the Behavioral Cartography ($\BC$) output. By iterating $\IM$ over all the integers points (or each step given by a rational value, e.g., $1/3$) inside a finite but dense rectangle $V_0$ in the parametric space, one is able to decompose (most of) the parametric space included into $V_0$ into behavioral tiles\footnote{Actually, one can take a finer discretization step to ensure a better coverability of~$V_0$}~\cite{af10}.
 
 For a given tile, we ensure that for every valuation of the parameters in this tile, the behavior of $\A$ is the same;
 therefore, we only have to test the schedulability of a single point for each tile to ensure the schedulability on the whole tile.
 
-Let us apply this method on a ``Rate Monotonic'' example of \cite{bb04} (Section~III).
-There are three periodic tasks $\tau_1, \tau_2$ and $\tau_3$ with periods of $T_1 = 3, \ T_2 = 8$ and $T_3 = 20$ and deadlines of $D_1 = 3, \ D_2 = 8$ and $D_3 = 20$. We are interested in finding the set
- of computation times of each task such that the system is schedulable. The interested reader can find the full details in \cite{bb04}.
+Let us apply this method on a ``Rate monotonic'' example of \cite{bb04} (Section~III).
+There are three periodic tasks $\tau_1, \tau_2$ and $\tau_3$ with periods of $T_1 = 3, \ T_2 = 8$ and $T_3 = 20$ and deadlines of $D_1 = 3, \ D_2 = 8$ and $D_3 = 20$.
+We are interested in finding the set of computation times of each task such that the system is schedulable.
+(The interested reader can find the full details in \cite{bb04}.)
 
 We set $V_0$ as $C_1 \in [0,3]$, $C_2 \in [0,8]$ and $C_3 = 0$, where $C_i$ is the computational time of $\tau_i$. The system is unschedulable if there exists a task $\tau_i$ such that $C_i > T_i$. 
 % We recall the algorithm for $\BC$, we first pick an integer point $\pi_k$ that does not belong to any tile already computed and we synthesize $\IM(\A,\pi_k)$ which will be a new tile. We iterate this process 
@@ -776,8 +780,8 @@ The result for this example is given in Figure \ref{fig:carto} for this $V_0$ wi
 	\label{fig:carto}
 \end{figure}
 
-Note that the full dense parametric space is covered after only 20 applications of~$\IM$.
-The green part corresponds to the bottom left ``triangle'' of Fig. 1(a) in~\cite{bb04}.
+Note that the full dense parametric space (including beyond~$V_0$) is covered after only 20 applications of~$\IM$.
+The green part corresponds to the bottom left ``triangle'' of Figure~1(a) in~\cite{bb04}.
 
 
 % 
