re-modif mineure appendix 2 (ref LaTeX)
git-svn-id: https://svn.lsv.ens-cachan.fr/kuehne/projects/IMITATOR2/branches/pta@424 6f1578d2-a1e8-4f7d-a79a-10a3a1991f00

--- a/articles/2012-03-05-FM/2012-03-12-IMITATOR-FM.tex
+++ b/articles/2012-03-05-FM/2012-03-12-IMITATOR-FM.tex
@@ -763,7 +763,7 @@ inside a finite but dense rectangle $V_0$ in the parametric space, one is able t
 For a given tile, we ensure that for every valuation of the parameters in this tile, the behavior of $\A$ is the same;
 therefore, we only have to test the schedulability of a single point for each tile to ensure the schedulability on the whole tile.
 
-Let us apply this method on a ``Rate monotonic'' example of \cite{bb04} (Section~III).
+Let us apply this method on a ``Rate monotonic'' example of \cite[Section~III]{bb04}.
 There are three periodic tasks $\tau_1, \tau_2$ and $\tau_3$ with periods of $T_1 = 3, \ T_2 = 8$ and $T_3 = 20$ and deadlines of $D_1 = 3, \ D_2 = 8$ and $D_3 = 20$.
 We are interested in finding the set of computation times of each task such that the system is schedulable.
 (The interested reader can find the full details in \cite{bb04}.)
@@ -782,7 +782,7 @@ The result for this example is given in Figure \ref{fig:carto} for this $V_0$ wi
 \end{figure}
 
 Note that the full dense parametric space (including beyond~$V_0$) is covered after only 20 applications of~$\IM$.
-The green part corresponds to the bottom left ``triangle'' of Figure~1(a) in~\cite{bb04}.
+The green part corresponds to the bottom left ``triangle'' of~\cite[Figure~1(a)]{bb04}.
 
 
 % 
