resoumission au cas ou
git-svn-id: https://svn.lsv.ens-cachan.fr/kuehne/projects/IMITATOR2/branches/pta@445 6f1578d2-a1e8-4f7d-a79a-10a3a1991f00

--- a/articles/2012-03-05-FM/2012-03-12-IMITATOR-FM.tex
+++ b/articles/2012-03-05-FM/2012-03-12-IMITATOR-FM.tex
@@ -734,7 +734,7 @@ with first interesting results.
 \begin{figure}[ht!]
 	\centering
  		\includegraphics[width=3cm]{./figures/geom.jpg}
-	\caption{Geometrical representation of $\Ko$ around $\pio: (2,5)$.}
+	\caption{Geometrical representation of $\Ko$ around $\pio: (2,5)$}
 	\label{fig:geom}
 \end{figure}
 
