--- a/articles/2012-03-05-FM-HYMITATOR/biblioFM.bib
+++ b/articles/2012-03-05-FM-HYMITATOR/biblioFM.bib
@@ -100,6 +100,16 @@
   	month =	nov,
 }
 
+
+@misc{afks12,
+  	author =	{Andr{\'e}, {\'E}tienne and Fribourg, Laurent K\"uhne, Ulrich and Soulat, Romain},
+  	title =	{{IMITATOR} 2.5: A Tool for Analyzing Robustness in Scheduling Problems},
+  	year =	{2012},
+  	note = {Submitted. Available on \url{www.lsv.ens-cachan.fr/Software/imitator/IMITATOR2.5.pdf}}
+}
+
+
+
 @inproceedings{afs09,
   	author =	{Andr{\'e}, {\'E}. and Fribourg, L. and Sproston, J.},
   	booktitle =	{{AVoCS}'09},
@@ -140,7 +150,6 @@
   	series =	{Lecture Notes in Computer Science},
   	booktitle =	{{P}roceedings of the 4th {NASA} {F}ormal {M}ethods {S}ymposium ({NFM}'12)},
 
-  	
 @inproceedings{and09,
   	author =	{Andr{\'e}, {\'E}tienne},
   	booktitle =	{{ICTAC}'09},
