--- a/articles/2012-03-05-FM-HYMITATOR/biblioFM.bib
+++ b/articles/2012-03-05-FM-HYMITATOR/biblioFM.bib
@@ -554,6 +554,16 @@ Proceedings of the 17th International Colloquium on Automata, Languages and Prog
  address = {Stanford, CA, USA},
 }
 
+@INPROCEEDINGS{FI2004,
+    author = {A. Fehnker and F. Ivancic},
+    title = {Benchmarks for Hybrid Systems Verification},
+    booktitle = {HSCC},
+    year = {2004},
+    pages = {326--341},
+    publisher = {Springer}
+}
+
+
 
 @inproceedings{AMP98,
 	author = {Asarin, E. and Maler, O. and Pnueli, A.},
