--- a/articles/2012-03-05-FM-HYMITATOR/2012-04-22-HYMITATOR-iFM.tex
+++ b/articles/2012-03-05-FM-HYMITATOR/2012-04-22-HYMITATOR-iFM.tex
@@ -275,7 +275,7 @@
 \newcommand{\graphviz}{Graphviz}
 \newcommand{\hytech}{{\sc HyTech}}
 \newcommand{\imitator}{\textsc{Imitator}}
-\newcommand{\imitatordeux}{\textsc{Imitator}\,II}
+% \newcommand{\imitatordeux}{\textsc{Imitator}\,II}
 \newcommand{\hymitator}{\textsc{Hymitator}}
 \newcommand{\kronos}{\textsc{Kronos}}
 \newcommand{\nusmv}{NuSMV}
@@ -340,6 +340,7 @@ $^2$Universit\"at Bremen, Germany}
 	Hybrid Automata are a powerful formalism for the modeling and verification of such systems.
 	A common problem in hybrid system verification is the good parameters problem, which consists in identifying a set of parameter valuations which guarantee a certain behavior of a system.
 	We present here \hymitator{}, a tool allowing efficient parameter synthesis for hybrid automata.
+	\commentaire{parler de robustesse des l'abstract}
 \end{abstract}
 
 \keywords{Real-Time Systems, Hybrid Automata, Verification, Parameter Synthesis}
@@ -349,7 +350,7 @@ $^2$Universit\"at Bremen, Germany}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Motivation}
+\section{Motivation and History}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -359,17 +360,17 @@ In~\cite{acef09}, we proposed the inverse method for Timed Automata, a subclass 
 Different from CEGAR-based methods, this original semi-algorithm for parameter synthesis is based on a ``good'' parameter valuation~$\pio$ instead of a set of ``bad'' states.
 $\IM$ synthesizes a constraint~$\Ko$ on the parameters such that, for all parameter valuation~$\piprime$ satisfying $\Ko$, the trace set (i.e., the discrete behavior) of~$\A$ under~$\piprime$ is the same as for~$\A$ under~$\pio$.
 This preserves in particular linear time properties, and provides the system with a criterion of robustness.
-By iterating the inverse method on all integer points within a bounded reference parameter domain, we get a set of constraints %(``tiles'')
+By iterating the inverse method on all integer points within a bounded reference parameter domain, we get a set of constraints (``tiles'')
 such that, for every point in each such constraint, the time-abstract behavior is the same: this gives a behavioral cartography of the system~\cite{af10}.
 
 A basic implementation named \imitator{} (for \emph{Inverse Method for Inferring Time AbstracT behaviOR}) has first been proposed%in~\cite{and09}
 , under the form of a \python{} script calling \hytech{}.
-The tool has then been entirely rewritten in \imitatordeux{}~\cite{and10}, under the form of a standalone \ocaml{} program making use of the Parma Polyhedra Library (PPL)~\cite{bhz08}.
-The latest version (2.5) includes stopwatches and arbitrary updates, and has been applied to many scheduling problems~\cite{afks12}.
+The tool has then been entirely rewritten in \imitator{}\,2.0~\cite{and10}, under the form of a standalone \ocaml{} program making use of the Parma Polyhedra Library (PPL)~\cite{bhz08}.
 A number of case studies containing up to 60 timing parameters could be efficiently verified in the purely timed framework.
+The latest version (2.5) includes stopwatches and arbitrary updates, and has been applied to many scheduling problems~\cite{afks12}.
 
-The inverse method and the behavioral cartography have then been extended to hybrid systems in~\cite{FK11}, and implemented in a prototype ``fork'' of \imitatordeux{}.
-\commentaire{small description to add}
+The inverse method and the behavioral cartography have then been extended to hybrid systems in~\cite{FK11}, and implemented in a prototype ``fork'' of \imitator{}\,2.0.
+% \commentaire{small description to add}
 We present in this paper \hymitator{}, an extension of that prototype, performing parameter synthesis on hybrid systems.
 
 
@@ -388,7 +389,7 @@ We present in this paper \hymitator{}, an extension of that prototype, performin
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Architecture and Features}
+\section{Implementation and Features}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -548,7 +549,7 @@ Unfortunately, it can hardly verify even medium sized examples due to exact arit
 
 
 
-
+\commentaire{justifier l'aspect fork, et non extension d'IMITATOR 2}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
